HTML basi structure

--- a/index.html
+++ b/index.html
@@ -8,6 +8,66 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
   </head>
   <body>
+    <!-- HEADER -->
+    <header>
+      <!-- FIXED TOP MENU -->
+      <section>
+      </section>
+      <!-- end FIXED TOP MENU -->
+      <!-- HEADER - SECOND PART -->
+      <section>
+        <!-- Main navigation menu -->
+        <div class="main-nav">
+        </div>
+        <!-- edn Main navigation menu -->
+        <!-- Jumbotron -->
+        <div class="jumbotron">
+        </div>
+        <!-- end Jumbotron -->
+        <!-- Green and empty strip -->
+        <div class="">
+        </div>
+        <!-- end Green and empty strip -->
+      </section>
+      <!-- end HEADER - SECOND PART -->
+    </header>
+    <!-- end HEADER -->
+    <!-- MAIN -->
+    <main>
+      <!-- INFO 1 -->
+      <section>
 
+      </section>
+      <!-- end INFO 1 -->
+      <!-- INFO 2 -->
+      <section>
+
+      </section>
+      <!-- end INFO 2 -->
+      <!-- INFO 3 -->
+      <section>
+
+      </section>
+      <!-- end INFO 3 -->
+    </main>
+    <!-- end MAIN -->
+    <!-- FOOTER -->
+    <footer>
+      <section>
+      </section>
+      <!-- LANGUAGES BAR -->
+      <div class="">
+      </div>
+      <!-- end LANGUAGES BAR -->
+      <!-- FINALE NOTES (2 columns) -->
+      <div class="">
+        <div class="">
+        </div>
+        <div class="">
+        </div>
+      </div>
+      <!-- end FINALE NOTES (2 columns) -->
+    </footer>
+    <!-- end FOOTER -->
   </body>
 </html>
