--- a/index.html
+++ b/index.html
@@ -11,7 +11,23 @@
     <!-- HEADER -->
     <header>
       <!-- FIXED TOP MENU -->
-      <section>
+      <section id="top-menu">
+        <div class="container clearfix">
+          <div class="column2">
+            <i class="fas fa-globe-europe"></i>
+            <div>English
+            </div>
+            <i class="fas fa-chevron-down"></i>
+            <div class="">
+              Contact Us
+            </div>
+          </div>
+          <div class="column2 right-align ">
+            <i id="search-icon" class="fas fa-search"></i>
+            <a id="btn-login" class="btn-small" href="#">Log in</a>
+            <a class="btn btn-small" href="#">Get BubSpot free</a>
+          </div>
+        </div>
       </section>
       <!-- end FIXED TOP MENU -->
       <!-- HEADER - SECOND PART -->
@@ -32,6 +48,9 @@
       <!-- end HEADER - SECOND PART -->
     </header>
     <!-- end HEADER -->
+    <div class="">
+      <br><br><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    </div>
     <!-- MAIN -->
     <main>
       <!-- INFO 1 -->
