Header - whole (completed 70%)

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Home | Hubspot</title>
+    <title>THANG Home | Hubspot</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/all.min.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
@@ -34,21 +34,37 @@
       <section>
         <!-- Main navigation menu -->
         <div class="main-nav">
+          <div class="container clearfix">
+            <div class="column2">
+              <img src="img/logo.svg" alt="logo">
+            </div>
+            <div class="column2 right-align ">
+              <span>Sofware <i class="fas fa-chevron-down"></i></span>
+              <a href="#">Pricing</a>
+              <span>Resources <i class="fas fa-chevron-down"></i></span>
+              <span>Partners <i class="fas fa-chevron-down"></i></span>
+              <span>About <i class="fas fa-chevron-down"></i></span>
+            </div>
+          </div>
         </div>
         <!-- edn Main navigation menu -->
         <!-- Jumbotron -->
         <div class="jumbotron">
+          <div class="container clearfix">
+            <div class="column2">
+              <h1>There's a better way to grow.</h1>
+              <p>Marketing, sales, and service software that helps your business grow without compromise. Becasue "good for the business" shoud also mean "good for the customer.""</p>
+              <a class="btn btn-big" href="#">GetHubsportFree</a>
+              <p>Get started with FREE tools, and upgrade as you grow.</p>
+            </div>
+          </div>
         </div>
         <!-- end Jumbotron -->
-        <!-- Green and empty strip -->
-        <div class="">
-        </div>
-        <!-- end Green and empty strip -->
       </section>
       <!-- end HEADER - SECOND PART -->
     </header>
     <!-- end HEADER -->
-    <div class="">
+    <div class="fake">
       <br><br><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     </div>
     <!-- MAIN -->
