Main - two sections (incomplete)

--- a/index.html
+++ b/index.html
@@ -64,21 +64,32 @@
       <!-- end HEADER - SECOND PART -->
     </header>
     <!-- end HEADER -->
-    <div class="fake">
-      <br><br><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    </div>
     <!-- MAIN -->
     <main>
       <!-- INFO 1 -->
       <section>
-
+        <!-- First container -->
+        <div class="container" id="first-main">
+          <img src="img/Integrations_Illustration.webp" alt="illustration">
+          <h2>Powerful alone. Better together</h2>
+          <p>HubSpot offers a full stack of software for marketing, sales, and customer service, with a completely free CRM at its core. They’re powerful alone — but even better when used together.</p>
+        </div>
       </section>
       <!-- end INFO 1 -->
-      <!-- INFO 2 -->
-      <section>
-
+      <!-- FREE HUB SPOT  -->
+      <section class="container clearfix" id="hub-spot">
+        <div class="column4">
+          <img src="img/CRM-Illustration.svg" alt="">
+          <a class="btn btn-big" href="#">Learn more</a>
+        </div>
+        <div id="column75percent">
+          <h3>Free HubSpot CRM</h3>
+          <p>Everything you need to organize, track, and build better relationships with leads and customers. Yes, it's 100% free. Forever.</p>
+          <h3>Popular feature</h3>
+          <p><i class="fas fa-check-circle"></i>Contact <i class="fas fa-check-circle"></i>Insights <i class="fas fa-check-circle"></i>Deals Tasks</p>
+        </div>
       </section>
-      <!-- end INFO 2 -->
+      <!-- end FREE HUB SPOT2 -->
       <!-- INFO 3 -->
       <section>
 
@@ -86,6 +97,9 @@
       <!-- end INFO 3 -->
     </main>
     <!-- end MAIN -->
+    <div class="fake">
+      <br><br><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    </div>
     <!-- FOOTER -->
     <footer>
       <section>
