Main - third part (not completed)

--- a/index.html
+++ b/index.html
@@ -90,11 +90,51 @@
         </div>
       </section>
       <!-- end FREE HUB SPOT2 -->
-      <!-- INFO 3 -->
-      <section>
+      <!-- INFO LAST -->
+      <section class="container clearfix" id="info-last">
+        <div class="column3 left">
+          <div class="inside-container">
+            <div class="head-column">
+              <img src="img/Marketing-Hub-Free.svg" alt="immagine">
+              <h3>Marketing Hub</h3>
+              <p>Marketing software to help you grow traffic, convert more visitores, and run complete inbound marketing campaigns at scale.</p>
+            </div>
+            <div class="bottom-column">
+              <h4>Popular feature</h4>
+              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+            </div>
+          </div>
 
+        </div>
+        <div class="column3 centre">
+          <div class="inside-container">
+            <div class="head-column">
+              <img src="img/Sales-Professional-Illustration.svg" alt="immagine">
+              <h3>Sales Hub</h3>
+              <p>Time-saving sales software that helps you get deeper insights into prospects, automate the tasks you hate, and close more deals faster</p>
+            </div>
+            <div class="bottom-column">
+              <h4>Popular feature</h4>
+              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+            </div>
+          </div>
+        </div>
+        <div class="column3 right">
+          <div class="inside-container">
+            <div class="head-column">
+              <img src="img/Service-Hub-Illustration.svg" alt="immagine">
+              <h3>Services Hub</h3>
+              <p>Customer service software to help you connect with customers, exceed expectations, and turn them into promoteres that grow your business</p>
+            </div>
+            <div class="bottom-column">
+              <h4>Popular feature</h4>
+              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+            </div>
+            <
+          </div>
+        </div>
       </section>
-      <!-- end INFO 3 -->
+      <!-- end INFO LAST -->
     </main>
     <!-- end MAIN -->
     <div class="fake">
