--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <div class="container clearfix">
             <div class="column2">
               <h1>There's a better way to grow.</h1>
-              <p>Marketing, sales, and service software that helps your business grow without compromise. Becasue "good for the business" shoud also mean "good for the customer.""</p>
+              <p>Marketing, sales, and service software that helps your business grow without compromise. Becasue "good for the business" shoud also mean "good for the customer."</p>
               <a class="btn btn-big" href="#">GetHubsportFree</a>
               <p>Get started with FREE tools, and upgrade as you grow.</p>
             </div>
@@ -101,7 +101,14 @@
             </div>
             <div class="bottom-column">
               <h4>Popular feature</h4>
-              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+              <ul>
+                <li><i class="fas fa-check-circle"></i>Lead Generation</li>
+                <li><i class="fas fa-check-circle"></i>Marketing Automation</li>
+                <li><i class="fas fa-check-circle"></i>Analytics</li>
+              </ul>
+            </div>
+            <div class="btn-box">
+              <a class="btn btn-big" href="#">Learn more</a>
             </div>
           </div>
 
@@ -115,7 +122,14 @@
             </div>
             <div class="bottom-column">
               <h4>Popular feature</h4>
-              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+              <ul>
+                <li><i class="fas fa-check-circle"></i>Email Tracking</li>
+                <li><i class="fas fa-check-circle"></i>Meeting Scheduling</li>
+                <li><i class="fas fa-check-circle"></i>Email Automation</li>
+              </ul>
+            </div>
+            <div class="btn-box">
+              <a class="btn btn-big" href="#">Learn more</a>
             </div>
           </div>
         </div>
@@ -124,17 +138,28 @@
             <div class="head-column">
               <img src="img/Service-Hub-Illustration.svg" alt="immagine">
               <h3>Services Hub</h3>
-              <p>Customer service software to help you connect with customers, exceed expectations, and turn them into promoteres that grow your business</p>
+              <p>Customer service software to help you connect with customers, exceed expectations, and turn them into promoters that grow your business</p>
             </div>
             <div class="bottom-column">
               <h4>Popular feature</h4>
-              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+              <ul>
+                <li><i class="fas fa-check-circle"></i>Ticktes</li>
+                <li><i class="fas fa-check-circle"></i>Customer Feedback</li>
+                <li><i class="fas fa-check-circle"></i>Knowledge Base</li>
+              </ul>
             </div>
-            <
+            <div class="btn-box">
+              <a class="btn btn-big" href="#">Learn more</a>
+            </div>
           </div>
         </div>
       </section>
       <!-- end INFO LAST -->
+      <!-- EARN AND GROW -->
+      <section id="earn-grow">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </section>
+      <!-- end EARN AND GROW -->
     </main>
     <!-- end MAIN -->
     <div class="fake">
