--- a/index.html
+++ b/index.html
@@ -161,37 +161,42 @@
           <h2>Learn and grow with award-winning support and a thriving community behind you.</h2>
           <p>You don't have to go it alone. Master the inbound methodology and get the most out of your tools with HubSpot's legendary customer support team and a community of thousands of marketing and sales pros just like you.</p>
         </div>
+        <!-- Prima prima riga di box -->
         <div class="earn-grow-table container clearfix">
+          <!-- riga 1 colonna 1 -->
           <div class="column4">
             <div class="upper-column4">
-              <img id="i-hand" src="img/handshake.svg" alt="handshake">
+              <img id="i-hand" src="img/homepage_community_agency.svg" alt="handshake">
             </div>
             <div class="bottom-column4">
               <h2>150+</h2>
               <p>HubSpot user groups</p>
             </div>
           </div>
+          <!-- riga 1 colonna 2 -->
           <div class="column4">
             <div class="upper-column4">
-              <img id="i-hand" src="img/handshake.svg" alt="handshake">
+              <img src="img/homepage_community_blog.svg" alt="icona">
             </div>
             <div class="bottom-column4">
               <h2>218k+</h2>
               <p>certified professionals</p>
             </div>
           </div>
+          <!-- riga 1 colonna 3 -->
           <div class="column4">
             <div class="upper-column4">
-              <img id="i-hand" src="img/handshake.svg" alt="handshake">
+              <img id="i-hand" src="img/homepage_community_academy.svg" alt="icona">
             </div>
             <div class="bottom-column4">
               <h2>26+</h2>
               <p>registered attendees</p>
             </div>
           </div>
+          <!-- riga 1 colonna 4 -->
           <div class="column4">
             <div class="upper-column4">
-              <img id="i-hand" src="img/handshake.svg" alt="handshake">
+              <img id="i-hand" src="img/homepage_community_inbound.svg" alt="icona">
             </div>
             <div class="bottom-column4">
               <h2>150+</h2>
@@ -199,6 +204,51 @@
             </div>
           </div>
         </div>
+        <!-- Fine prima riga di box -->
+        <!-- Seconda riga di box -->
+        <div class="earn-grow-table container clearfix">
+          <!-- riga 2 colonna 1 -->
+          <div class="column4">
+            <div class="upper-column4">
+              <img src="img/homepage_community_connect.svg" alt="icona">
+            </div>
+            <div class="bottom-column4">
+              <h2>400+</h2>
+              <p>integrations</p>
+            </div>
+          </div>
+          <!-- riga 2 colonna 2 -->
+          <div class="column4">
+            <div class="upper-column4">
+              <img id="i-hand" src="img/homepage_community_globe.svg" alt="icona">
+            </div>
+            <div class="bottom-column4">
+              <h2>6</h2>
+              <p>languages</p>
+            </div>
+          </div>
+          <!-- riga 2 colonna 3 -->
+          <div class="column4">
+            <div class="upper-column4">
+              <img src="img/homepage_community_followers.svg" alt="handshake">
+            </div>
+            <div class="bottom-column4">
+              <h2>2.6M+</h2>
+              <p>social followers</p>
+            </div>
+          </div>
+          <!-- riga 2 colonna 4 -->
+          <div class="column4">
+            <div class="upper-column4">
+              <img src="img/growthhub-white-small.svg" alt=icona">
+            </div>
+            <div class="bottom-column4">
+              <h2>5K+</h2>
+              <p>profiles and counting</p>
+            </div>
+          </div>
+        </div>
+        <!-- Fine seconda riga di box -->
       </section>
       <!-- end EARN AND GROW -->
     </main>
