--- a/index.html
+++ b/index.html
@@ -179,8 +179,8 @@
               <img src="img/homepage_community_blog.svg" alt="icona">
             </div>
             <div class="bottom-column4">
-              <h2>218k+</h2>
-              <p>certified professionals</p>
+              <h2>4.5M+</h2>
+              <p>monthly visits</p>
             </div>
           </div>
           <!-- riga 1 colonna 3 -->
@@ -189,8 +189,8 @@
               <img id="i-hand" src="img/homepage_community_academy.svg" alt="icona">
             </div>
             <div class="bottom-column4">
-              <h2>26+</h2>
-              <p>registered attendees</p>
+              <h2>155+</h2>
+              <p>certified professionals</p>
             </div>
           </div>
           <!-- riga 1 colonna 4 -->
@@ -199,8 +199,8 @@
               <img id="i-hand" src="img/homepage_community_inbound.svg" alt="icona">
             </div>
             <div class="bottom-column4">
-              <h2>150+</h2>
-              <p>HubSpot user groups</p>
+              <h2>21+</h2>
+              <p>registered attendees</p>
             </div>
           </div>
         </div>
@@ -213,7 +213,7 @@
               <img src="img/homepage_community_connect.svg" alt="icona">
             </div>
             <div class="bottom-column4">
-              <h2>400+</h2>
+              <h2>200+</h2>
               <p>integrations</p>
             </div>
           </div>
@@ -223,7 +223,7 @@
               <img id="i-hand" src="img/homepage_community_globe.svg" alt="icona">
             </div>
             <div class="bottom-column4">
-              <h2>6</h2>
+              <h2>6+</h2>
               <p>languages</p>
             </div>
           </div>
