--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/all.min.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
   </head>
+
   <body>
     <!-- HEADER -->
     <header>
@@ -64,6 +65,7 @@
       <!-- end HEADER - SECOND PART -->
     </header>
     <!-- end HEADER -->
+
     <!-- MAIN -->
     <main>
       <!-- INFO 1 -->
@@ -82,7 +84,7 @@
           <img src="img/CRM-Illustration.svg" alt="">
           <a class="btn btn-big" href="#">Learn more</a>
         </div>
-        <div id="column75percent">
+        <div class="column67percent">
           <h3>Free HubSpot CRM</h3>
           <p>Everything you need to organize, track, and build better relationships with leads and customers. Yes, it's 100% free. Forever.</p>
           <h3>Popular feature</h3>
@@ -251,24 +253,119 @@
         <!-- Fine seconda riga di box -->
       </section>
       <!-- end EARN AND GROW -->
+      <!-- LAST PART OF MAIN -->
+      <section #id="last-main">
+        <!-- first row of LAST PART -->
+        <div class="container clearfix">
+          <div class="column3">
+            <h2>64,500</h2>
+            <p>customers in over <span #="number">100</span> countries growing their business with HubSpot</p>
+          </div>
+          <div class="column67percent">
+            <div class="logos-row">
+              <img src="img/Atlassian-horizontal-blue.webp" alt="logo">
+              <img src="img/doordash_owler.webp" alt="logo">
+              <img src="img/g2crowd.webp" alt="logo">
+              <img src="img/purple-logo.webp" alt="loro">
+            </div>
+            <div class="logos-row">
+              <img src="img/Subaru_Logo.webp" alt="logo">
+              <img src="img/Wistia_logo.webp" alt="logo">
+              <img src="img/Classpass-logo.webp" alt="logo">
+              <img src="img/VMware_logo.webp" alt="logo">
+            </div>
+          </div>
+        </div>
+        <!-- second row of LAST PART -->
+        <div class="container clearfix">
+          <div class="column2">
+            <h2>Start Growing with hubSpot Today</h2>
+            <p>With tools to make every part of your process more human and a support team excited to help you, getting started with inbound has never been easier.</p>
+            <a class="btn btn-big" href="#">GetHubsportFree</a>
+          </div>
+          <div class="column2 right-align">
+            <img src="img/woman.webp" id="img-woman" alt="woman">
+          </div>
+        </div>
+      </section>
+      <!-- end LAST PART OF MAIN -->
     </main>
     <!-- end MAIN -->
-    <div class="fake">
-      <br><br><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    </div>
+
     <!-- FOOTER -->
     <footer>
-      <section>
+      <section class="container clearfix">
+        <!-- column 1 -->
+        <div class="column4">
+          <h3>Increase Your Traffic</h3>
+          <ul>
+            <li>Ad Software</li>
+            <li>Blog Software</li>
+            <li>Seo Software</li>
+            <li>Social Media Software</li>
+            <li>Content Management System</li>
+          </ul>
+        </div>
+        <!-- column 2 -->
+        <div class="column4">
+          <h3>Connect With Leads</h3>
+          <ul>
+            <li>Find New Prospects</li>
+            <li>Email Tracking</li>
+            <li>Sales Email Templates</li>
+            <li>Click to Call Your Leads</li>
+            <li>Email Marketing</li>
+          </ul>
+        </div>
+        <!-- column 3 -->
+        <div class="column4">
+          <h3>Close and Manage Leads</h3>
+          <ul>
+            <li>Document Tracking Tool</li>
+            <li>Meeting Schedule Tool</li>
+            <li>Sales Automation Tool</li>
+            <li>Lead Management Tool</li>
+            <li>Pipeline Management Tool</li>
+          </ul>
+        </div>
+        <!-- column 4 -->
+        <div class="column4">
+          <h3>Support and Tools</h3>
+          <ul>
+            <li>HubSpot PArtners</li>
+            <li>Join a local User Group</li>
+            <li>Get a Free Website Report</li>
+            <li>HubSpot Templates</li>
+            <li>Free Tools & Generators</li>
+            <a class="btn btn-small" id="support-btn" href="#">Contact HubSpot Support</a>
+            <div class="social-media-row">
+              <i class="fab fa-facebook-square"></i>
+              <i class="fab fa-instagram"></i>
+              <i class="fab fa-youtube"></i>
+              <i class="fab fa-twitter"></i>
+              <i class="fab fa-linkedin"></i>
+            </div>
+          </ul>
+        </div>
       </section>
       <!-- LANGUAGES BAR -->
-      <div class="">
+      <div class="lang-bar container">
+        <a href="#">English</a>
+        <a href="#">Deutsch</a>
+        <a href="#">日本語</a>
+        <a href="#">Español</a>
+        <a href="#">Français</a>
       </div>
       <!-- end LANGUAGES BAR -->
       <!-- FINALE NOTES (2 columns) -->
-      <div class="">
-        <div class="">
+      <div class="container clearfix">
+        <div class="column2 copyright">
+          <img src="img/HSLogo_gray.svg" alt="logo">
+          <p #id="copyright">Copyright &copy; 2019 HubSpot, Inc.</p>
         </div>
-        <div class="">
+        <div class="column2 right-align legal">
+          <a href="#">Legal Stuff</a>
+          <a href="#">Privacy Policy</a>
         </div>
       </div>
       <!-- end FINALE NOTES (2 columns) -->
