--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
           <!-- riga 2 colonna 4 -->
           <div class="column4">
             <div class="upper-column4">
-              <img src="img/growthhub-white-small.svg" alt=icona">
+              <img src="img/growthhub-white-small.svg" alt="icona">
             </div>
             <div class="bottom-column4">
               <h2>5K+</h2>
