--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <!-- end INFO 1 -->
       <!-- FREE HUB SPOT  -->
       <section class="container clearfix" id="hub-spot">
-        <div class="column4">
+        <div class="column3">
           <img src="img/CRM-Illustration.svg" alt="">
           <a class="btn btn-big" href="#">Learn more</a>
         </div>
@@ -135,7 +135,7 @@
             </div>
           </div>
         </div>
-        <div class="column3 right">
+        <div class="column3 right-align right"> <!-- right CLASS TO BE DELETED -->
           <div class="inside-container">
             <div class="head-column">
               <img src="img/Service-Hub-Illustration.svg" alt="immagine">
@@ -262,7 +262,7 @@
             <p>customers in over <span #="number">100</span> countries growing their business with HubSpot</p>
           </div>
           <div class="column67percent">
-            <div class="logos-row">
+            <div class="logos-row right-align">
               <img src="img/Atlassian-horizontal-blue.webp" alt="logo">
               <img src="img/doordash_owler.webp" alt="logo">
               <img src="img/g2crowd.webp" alt="logo">
