--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <!-- FREE HUB SPOT  -->
       <section class="container clearfix" id="hub-spot">
         <div class="column3">
-          <img src="img/CRM-Illustration.svg" alt="">
+          <img src="img/CRM-Illustration.svg" alt="icona">
           <a class="btn btn-big" href="#">Learn more</a>
         </div>
         <div class="column67percent">
@@ -268,7 +268,7 @@
               <img src="img/g2crowd.webp" alt="logo">
               <img src="img/purple-logo.webp" alt="loro">
             </div>
-            <div class="logos-row">
+            <div class="logos-row right-align">
               <img src="img/Subaru_Logo.webp" alt="logo">
               <img src="img/Wistia_logo.webp" alt="logo">
               <img src="img/Classpass-logo.webp" alt="logo">
