--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
     <!-- MAIN -->
     <main>
       <!-- INFO 1 -->
-      <section>
+      <section class="container" >
         <!-- First container -->
-        <div class="container" id="first-main">
+        <div id="first-main">
           <img src="img/Integrations_Illustration.webp" alt="illustration">
           <h2>Powerful alone. Better together</h2>
           <p>HubSpot offers a full stack of software for marketing, sales, and customer service, with a completely free CRM at its core. They’re powerful alone — but even better when used together.</p>
