--- a/index.html
+++ b/index.html
@@ -88,7 +88,10 @@
           <h3>Free HubSpot CRM</h3>
           <p>Everything you need to organize, track, and build better relationships with leads and customers. Yes, it's 100% free. Forever.</p>
           <h3>Popular feature</h3>
-          <p><i class="fas fa-check-circle"></i>Contact <i class="fas fa-check-circle"></i>Insights <i class="fas fa-check-circle"></i>Deals Tasks</p>
+          <ul>
+            <li><i class="fas fa-check-circle"></i>Contact</li>
+            <li><i class="fas fa-check-circle"></i>Insights</li>
+            <li><i class="fas fa-check-circle"></i>Deals Tasks</li>
         </div>
       </section>
       <!-- end FREE HUB SPOT2 -->
