"Top menu" completed 90%
"Top menu "not  fixed position yet

--- a/index.html
+++ b/index.html
@@ -14,16 +14,17 @@
       <!-- FIXED TOP MENU -->
       <section id="top-menu">
         <div class="container clearfix">
-          <div class="column2">
+          <div class="column2 left">
+            <div id="first-block">
             <i class="fas fa-globe-europe"></i>
-            <div>English
-            </div>
+            English
             <i class="fas fa-chevron-down"></i>
-            <div class="">
-              Contact Us
+            </div>
+            <div id="second-block">
+              <a href="#">Contact Us</a>
             </div>
           </div>
-          <div class="column2 right-align ">
+          <div class="column2 right right-align">
             <i id="search-icon" class="fas fa-search"></i>
             <a id="btn-login" class="btn-small" href="#">Log in</a>
             <a class="btn btn-small" href="#">Get BubSpot free</a>
