"Main nav" completed

--- a/index.html
+++ b/index.html
@@ -35,17 +35,27 @@
       <!-- HEADER - SECOND PART -->
       <section>
         <!-- Main navigation menu -->
-        <div class="main-nav">
+        <div id="main-nav">
           <div class="container clearfix">
             <div class="column2">
               <img src="img/logo.svg" alt="logo">
             </div>
-            <div class="column2 right-align ">
-              <span>Sofware <i class="fas fa-chevron-down"></i></span>
-              <a href="#">Pricing</a>
-              <span>Resources <i class="fas fa-chevron-down"></i></span>
-              <span>Partners <i class="fas fa-chevron-down"></i></span>
-              <span>About <i class="fas fa-chevron-down"></i></span>
+            <div class="column2 right right-align ">
+              <div class="main-nav-block">
+                <span>Sofware</span><i class="fas fa-chevron-down"></i>
+              </div>
+              <div class="main-nav-block">
+                <a href="#">Pricing</a>
+              </div>
+              <div class="main-nav-block">
+                <span>Resources</span><i class="fas fa-chevron-down"></i>
+              </div>
+              <div class="main-nav-block">
+                <span>Partners</span><i class="fas fa-chevron-down"></i>
+              </div>
+              <div class="main-nav-block">
+                <span>About</span><i class="fas fa-chevron-down"></i>
+              </div>
             </div>
           </div>
         </div>
