JUMBOTRON upper part fixed

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               <h1>There's a better way to grow.</h1>
               <p>Marketing, sales, and service software that helps your business grow without compromise. Becasue "good for the business" shoud also mean "good for the customer."</p>
               <a class="btn btn-big" href="#">GetHubsportFree</a>
-              <p>Get started with FREE tools, and upgrade as you grow.</p>
+              <p class="small-text">Get started with FREE tools, and upgrade as you grow.</p>
             </div>
           </div>
         </div>
@@ -296,6 +296,7 @@
             <h2>Start Growing with hubSpot Today</h2>
             <p>With tools to make every part of your process more human and a support team excited to help you, getting started with inbound has never been easier.</p>
             <a class="btn btn-big" href="#">GetHubsportFree</a>
+            <p class="small-text">Get started with FREE tools, and upgrade as you grow.</p>
           </div>
           <div class="column2 right-align">
             <img src="img/woman.webp" id="img-woman" alt="woman">
