--- a/index.html
+++ b/index.html
@@ -314,51 +314,91 @@
         <div class="column4">
           <h3>Increase Your Traffic</h3>
           <ul>
-            <li>Ad Software</li>
-            <li>Blog Software</li>
-            <li>Seo Software</li>
-            <li>Social Media Software</li>
-            <li>Content Management System</li>
+            <li>
+              <a href="#">Ad Software</a>
+            </li>
+            <li>
+              <a href="#">Blog Software</a>
+            </li>
+            <li>
+              <a href="#">Seo Software</a>
+            </li>
+            <li>
+              <a href="#">Social Media Software</a>
+            </li>
+            <li>
+              <a href="#">Content Management System</a>
+            </li>
           </ul>
         </div>
         <!-- column 2 -->
         <div class="column4">
           <h3>Connect With Leads</h3>
           <ul>
-            <li>Find New Prospects</li>
-            <li>Email Tracking</li>
-            <li>Sales Email Templates</li>
-            <li>Click to Call Your Leads</li>
-            <li>Email Marketing</li>
+            <li>
+              <a href="#">Find New Prospects</a>
+            </li>
+            <li>
+              <a href="#">Email Tracking</a>
+            </li>
+            <li>
+              <a href="#">Sales Email Templates</a>
+            </li>
+            <li>
+              <a href="#">Click to Call Your Leads</a>
+            </li>
+            <li>
+              <a href="#">Email Marketing</a>
+            </li>
           </ul>
         </div>
         <!-- column 3 -->
         <div class="column4">
           <h3>Close and Manage Leads</h3>
           <ul>
-            <li>Document Tracking Tool</li>
-            <li>Meeting Schedule Tool</li>
-            <li>Sales Automation Tool</li>
-            <li>Lead Management Tool</li>
-            <li>Pipeline Management Tool</li>
+            <li>
+              <a href="#">Document Tracking Tool</a>
+            </li>
+            <li>
+              <a href="#">Meeting Schedule Tool</a>
+            </li>
+            <li>
+              <a href="#">Sales Automation Tool</a>
+            </li>
+            <li>
+              <a href="#">Lead Management Tool</a>
+            </li>
+            <li>
+              <a href="#">Pipeline Management Tool</a>
+            </li>
           </ul>
         </div>
         <!-- column 4 -->
         <div class="column4">
           <h3>Support and Tools</h3>
           <ul>
-            <li>HubSpot PArtners</li>
-            <li>Join a local User Group</li>
-            <li>Get a Free Website Report</li>
-            <li>HubSpot Templates</li>
-            <li>Free Tools & Generators</li>
+            <li>
+              <a href="#">HubSpot PArtners</a>
+            </li>
+            <li>
+              <a href="#">Join a local User Group</a>
+            </li>
+            <li>
+              <a href="#">Get a Free Website Report</a>
+            </li>
+            <li>
+              <a href="#">HubSpot Templates</a>
+            </li>
+            <li>
+              <a href="#">HubSpot Templates</a>
+            </li>
             <a class="btn btn-small" id="support-btn" href="#">Contact HubSpot Support</a>
             <div class="social-media-row">
-              <i class="fab fa-facebook-square"></i>
-              <i class="fab fa-instagram"></i>
-              <i class="fab fa-youtube"></i>
-              <i class="fab fa-twitter"></i>
-              <i class="fab fa-linkedin"></i>
+              <a href="#"><i class="fab fa-facebook-f"></i></a>
+              <a href="#"><i class="fab fa-instagram"></i></a>
+              <a href="#"><i class="fab fa-youtube"></i></a>
+              <a href="#"><i class="fab fa-twitter"></i></a>
+              <a href="#"><i class="fab fa-linkedin"></i></a>
             </div>
           </ul>
         </div>
