--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             </div>
           </div>
         </div>
-        <div class="column3 right-align right"> <!-- right CLASS TO BE DELETED -->
+        <div class="column3 right-align">
           <div class="inside-container">
             <div class="head-column">
               <img src="img/Service-Hub-Illustration.svg" alt="immagine">
@@ -172,95 +172,95 @@
       </section>
       <!-- end INFO LAST -->
       <!-- EARN AND GROW -->
-      <section id="earn-grow">
-        <div class="container">
+      <section id="learn-grow">
+        <div class="container first">
           <h2>Learn and grow with award-winning support and a thriving community behind you.</h2>
           <p>You don't have to go it alone. Master the inbound methodology and get the most out of your tools with HubSpot's legendary customer support team and a community of thousands of marketing and sales pros just like you.</p>
         </div>
         <!-- Prima prima riga di box -->
-        <div class="earn-grow-table container clearfix">
+        <div class="learn-grow-table first container clearfix">
           <!-- riga 1 colonna 1 -->
           <div class="column4">
             <div class="upper-column4">
-              <img id="i-hand" src="img/homepage_community_agency.svg" alt="handshake">
+              <img class="icon" src="img/homepage_community_agency.svg" alt="handshake">
             </div>
             <div class="bottom-column4">
               <h2>150+</h2>
-              <p>HubSpot user groups</p>
+              <p class="small-text">HubSpot user groups</p>
             </div>
           </div>
           <!-- riga 1 colonna 2 -->
           <div class="column4">
             <div class="upper-column4">
-              <img src="img/homepage_community_blog.svg" alt="icona">
+              <img class="icon" src="img/homepage_community_blog.svg" alt="icona">
             </div>
             <div class="bottom-column4">
               <h2>4.5M+</h2>
-              <p>monthly visits</p>
+              <p class="small-text">monthly visits</p>
             </div>
           </div>
           <!-- riga 1 colonna 3 -->
           <div class="column4">
             <div class="upper-column4">
-              <img id="i-hand" src="img/homepage_community_academy.svg" alt="icona">
+              <img class="icon" src="img/homepage_community_academy.svg" alt="icona">
             </div>
             <div class="bottom-column4">
               <h2>155+</h2>
-              <p>certified professionals</p>
+              <p class="small-text">certified professionals</p>
             </div>
           </div>
           <!-- riga 1 colonna 4 -->
-          <div class="column4">
+          <div class="column4 last">
             <div class="upper-column4">
-              <img id="i-hand" src="img/homepage_community_inbound.svg" alt="icona">
+              <img class="icon" src="img/homepage_community_inbound.svg" alt="icona">
             </div>
             <div class="bottom-column4">
               <h2>21+</h2>
-              <p>registered attendees</p>
+              <p class="small-text">registered attendees</p>
             </div>
           </div>
         </div>
         <!-- Fine prima riga di box -->
         <!-- Seconda riga di box -->
-        <div class="earn-grow-table container clearfix">
+        <div class="learn-grow-table second container clearfix">
           <!-- riga 2 colonna 1 -->
           <div class="column4">
             <div class="upper-column4">
-              <img src="img/homepage_community_connect.svg" alt="icona">
+              <img class="icon" src="img/homepage_community_connect.svg" alt="icona">
             </div>
             <div class="bottom-column4">
               <h2>200+</h2>
-              <p>integrations</p>
+              <p class="small-text">integrations</p>
             </div>
           </div>
           <!-- riga 2 colonna 2 -->
           <div class="column4">
             <div class="upper-column4">
-              <img id="i-hand" src="img/homepage_community_globe.svg" alt="icona">
+              <img class="icon" src="img/homepage_community_globe.svg" alt="icona">
             </div>
             <div class="bottom-column4">
               <h2>6+</h2>
-              <p>languages</p>
+              <p class="small-text">languages</p>
             </div>
           </div>
           <!-- riga 2 colonna 3 -->
           <div class="column4">
             <div class="upper-column4">
-              <img src="img/homepage_community_followers.svg" alt="handshake">
+              <img class="icon" src="img/homepage_community_followers.svg" alt="handshake">
             </div>
             <div class="bottom-column4">
               <h2>2.6M+</h2>
-              <p>social followers</p>
+              <p class="small-text">social followers</p>
             </div>
           </div>
           <!-- riga 2 colonna 4 -->
-          <div class="column4">
+          <div class="column4 last">
             <div class="upper-column4">
-              <img src="img/growthhub-white-small.svg" alt="icona">
+              <img class="icon" src="img/growthhub-white-small.svg" alt="icona">
             </div>
             <div class="bottom-column4">
               <h2>5K+</h2>
-              <p>profiles and counting</p>
+              <p class="small-text">profiles and counting</p>
             </div>
           </div>
         </div>
@@ -268,11 +268,11 @@
       </section>
       <!-- end EARN AND GROW -->
       <!-- LAST PART OF MAIN -->
-      <section #id="last-main">
+      <section id="last-main">
         <!-- first row of LAST PART -->
         <div class="container clearfix">
           <div class="column3">
-            <h2>64,500</h2>
+            <h1>64,500</h1>
             <p>customers in over <span #="number">100</span> countries growing their business with HubSpot</p>
           </div>
           <div class="column67percent">
@@ -291,8 +291,8 @@
           </div>
         </div>
         <!-- second row of LAST PART -->
-        <div class="container clearfix">
-          <div class="column2">
+        <div id="second-row-last-main" class="container clearfix">
+          <div class="column2 left">
             <h2>Start Growing with hubSpot Today</h2>
             <p>With tools to make every part of your process more human and a support team excited to help you, getting started with inbound has never been easier.</p>
             <a class="btn btn-big" href="#">GetHubsportFree</a>
