--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
               <p>Marketing software to help you grow traffic, convert more visitores, and run complete inbound marketing campaigns at scale.</p>
             </div>
             <div class="bottom-column">
-              <h4>Popular feature</h4>
+              <h4>POPULAR FEATURE</h4>
               <ul>
                 <li><i class="fas fa-check-circle"></i>Lead Generation</li>
                 <li><i class="fas fa-check-circle"></i>Marketing Automation</li>
@@ -137,7 +137,7 @@
               <p>Time-saving sales software that helps you get deeper insights into prospects, automate the tasks you hate, and close more deals faster</p>
             </div>
             <div class="bottom-column">
-              <h4>Popular feature</h4>
+              <h4>POPULAR FEATURE</h4>
               <ul>
                 <li><i class="fas fa-check-circle"></i>Email Tracking</li>
                 <li><i class="fas fa-check-circle"></i>Meeting Scheduling</li>
@@ -157,7 +157,7 @@
               <p>Customer service software to help you connect with customers, exceed expectations, and turn them into promoters that grow your business</p>
             </div>
             <div class="bottom-column">
-              <h4>Popular feature</h4>
+              <h4>POPULAR FEATURE</h4>
               <ul>
                 <li><i class="fas fa-check-circle"></i>Ticktes</li>
                 <li><i class="fas fa-check-circle"></i>Customer Feedback</li>
