--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <div class="column67percent">
           <h3>Free HubSpot CRM</h3>
           <p>Everything you need to organize, track, and build better relationships with leads and customers. Yes, it's 100% free. Forever.</p>
-          <h3>Popular feature</h3>
+          <h3 id="lesser-title">Popular feature</h3>
           <ul>
             <li><i class="fas fa-check-circle"></i>Contact</li>
             <li><i class="fas fa-check-circle"></i>Insights</li>
