--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>THANG Home | Hubspot</title>
+    <title>Home | Hubspot</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/all.min.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
@@ -72,6 +72,10 @@
           </div>
         </div>
         <!-- end Jumbotron -->
+        <!-- Bottom header -->
+        <div id="bottom-header">
+        </div>
+        <!-- end Bottom header -->
       </section>
       <!-- end HEADER - SECOND PART -->
     </header>
