--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
             <div class="column2 right right-align ">
               <div class="main-nav-block">
-                <span>Sofware</span><i class="fas fa-chevron-down"></i>
+                <span>Software</span><i class="fas fa-chevron-down"></i>
               </div>
               <div class="main-nav-block">
                 <a href="#">Pricing</a>
