--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
       <!-- end INFO LAST -->
       <!-- EARN AND GROW -->
       <section id="learn-grow">
-        <div class="container first">
+        <div class="container first-cont">
           <h2>Learn and grow with award-winning support and a thriving community behind you.</h2>
           <p>You don't have to go it alone. Master the inbound methodology and get the most out of your tools with HubSpot's legendary customer support team and a community of thousands of marketing and sales pros just like you.</p>
         </div>
